fixed scrollbars

--- a/css/code.css
+++ b/css/code.css
@@ -129,7 +129,9 @@ color:var(--light-green);
 }
 
 .project:hover{
-  background-color: var(--turqoise)
+background-color: var(--light-black);
+color: var(--turqoise);
+
 }
 
 
