--- a/css/index.css
+++ b/css/index.css
@@ -44,17 +44,17 @@ html, body {
   padding: 0;
 }
 
+
   body {
+  overflow-y: hidden;
   font-size: 16px;
-  scrollbar-hidth: thin;
-  scrollbar-color:  var(--dark-turqoise) var(--dark-grey);
+  /* scrollbar-width: thin; */
+  scrollbar-color:  var(--light-black) var(--dark-grey);
   margin-top: 30px;
   background-color: black;
   /* font-size: 14px; */
   min-height: 100vh;
-  overflow-x: hidden;
-  /*prevents the animatons positioned outside the html to make the screen too big*/
-  overflow-y: auto;
+  /* overflow-x: hidden; */
     /*opacity: 0;*/
     /*transition: opacity 1s ease;*/
   }
@@ -143,7 +143,7 @@ a {
 }
 
 .scroll{
-    overflow-y:scroll;
+    overflow-y: auto;
 }
 
 
@@ -210,7 +210,7 @@ a {
 
 a.link::before {
     content: "» ";
-    color: var(--dark-turqoise); 
+    color: var(--dark-turqoise);
   white-space: nowrap;
 }
 
@@ -764,7 +764,7 @@ flex-direction: row;
 
 .center-pre-wrapper {
   margin-top: var(--small-pad);
-  position: relative; 
+  position: relative;
   display: inline-block;
 }
 
